deploy/k8s/pma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-pma
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}
    project: cco-sandbox
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: http
  selector:
    app: ${APP_NAME}
